--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -126,7 +126,19 @@ jobs:
         run: |
           make test-torch-cpu
         env:
+          NNCF_COVERAGE: 1
           NUM_WORKERS: 4
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
+        with:
+          name: coverage_pt_cpu
+          path: ./coverage.xml
+      - name: Upload coverage report to codecov
+        uses: codecov/codecov-action@125fc84a9a348dbcf27191600683ec096ec9021c # v4.4.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: coverage_pt_cpu
+          flags: TORCH
   pytorch-cuda:
     timeout-minutes: 40
     defaults:
@@ -169,6 +181,19 @@ jobs:
           export PATH=/usr/local/cuda-12.1/bin${PATH:+:${PATH}}
           export LD_LIBRARY_PATH=/usr/local/cuda-12.1/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
           make test-torch-cuda
+        env:
+          NNCF_COVERAGE: 1
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
+        with:
+          name: coverage_pt_cuda
+          path: ./coverage.xml
+      - name: Upload coverage report to codecov
+        uses: codecov/codecov-action@125fc84a9a348dbcf27191600683ec096ec9021c # v4.4.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: coverage_pt_cuda
+          flags: TORCH
   tensorflow:
     timeout-minutes: 40
     defaults:
@@ -191,4 +216,16 @@ jobs:
         run: |
           make test-tensorflow
         env:
+          NNCF_COVERAGE: 1
           NUM_WORKERS: 6
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
+        with:
+          name: coverage_tensorflow
+          path: ./coverage.xml
+      - name: Upload coverage report to codecov
+        uses: codecov/codecov-action@125fc84a9a348dbcf27191600683ec096ec9021c # v4.4.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: coverage_tensorflow
+          flags: TENSORFLOW
