--- a/.github/action_configs/labeler.yml
+++ b/.github/action_configs/labeler.yml
@@ -74,3 +74,8 @@ NNCF Common:
       - 'examples/common/**/*!(.md)'
       - 'nncf/common/**/*!(.md)'
       - 'tests/common/**/*!(.md)'
+
+release target:
+- any:
+  - base-branch:
+    - '^release_v*'
