--- a/tests/torch/requirements.txt
+++ b/tests/torch/requirements.txt
@@ -25,3 +25,4 @@ timm==0.9.2
 torchvision
 fastdownload==0.0.7
 ultralytics==8.2.56  # TODO(dlyakhov) move ultralytics requirements to the nightly test
+diffusers==0.29.2
