--- a/tests/post_training/data/ptq_reference_data.yaml
+++ b/tests/post_training/data/ptq_reference_data.yaml
@@ -34,6 +34,12 @@ torchvision/resnet18_backend_CUDA_TORCH:
   metric_value: 0.69152
 torchvision/resnet18_backend_FX_TORCH:
   metric_value: 0.6946
+torchvision/swin_v2_s_backend_FP32:
+  metric_value: 0.83712
+torchvision/swin_v2_s_backend_OV:
+  metric_value: 0.83638
+torchvision/swin_v2_s_backend_FX_TORCH:
+  metric_value: 0.82908
 timm/crossvit_9_240_backend_CUDA_TORCH:
   metric_value: 0.689
 timm/crossvit_9_240_backend_FP32:
