--- a/.github/workflows/post_pr_merge.yml
+++ b/.github/workflows/post_pr_merge.yml
@@ -11,7 +11,7 @@ name: Post-PR merge actions
 permissions: read-all
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - develop
     types:
