--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -243,4 +243,4 @@ jobs:
         run: |
           pip install -r tests/tools/requirements.txt
       - name: Run tools precommit test scope
-        run: PYTHONPATH=./ pytest -ra tests/tools
+        run: python -m pytest -ra tests/tools
