Revert "Update pre-commit workflow"
This reverts commit 9777d26b8f2a76d8e4671646c160a83bccf4d19b.

--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -243,4 +243,4 @@ jobs:
         run: |
           pip install -r tests/tools/requirements.txt
       - name: Run tools precommit test scope
-        run: python -m pytest -ra tests/tools
+        run: PYTHONPATH=./ pytest -ra tests/tools
