--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -26,9 +26,9 @@ tinyllama_data_aware_gptq_backend_OV:
   metric_value: 0.87134
   num_int4: 94
   num_int8: 124
-  atol: 0.0004  # issue 148819
+  metrics_xfail_reason: "Issue-148819"
 tinyllama_scale_estimation_per_channel_backend_OV:
   metric_value: 0.81389
   num_int4: 188
   num_int8: 124
-  atol: 0.006  # issue 148819
+  metrics_xfail_reason: "Issue-148819"
