--- a/.github/workflows/api_set_label.yml
+++ b/.github/workflows/api_set_label.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.rest.issues.addLabels({
+            github.rest.issues.removeLabel({
               issue_number: ${{ steps.status.outputs.pr_number }},
               owner: context.repo.owner,
               repo: context.repo.repo,
