--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -32,3 +32,7 @@ tinyllama_scale_estimation_per_channel_backend_OV:
   num_int4: 188
   num_int8: 124
   metrics_xfail_reason: "Issue-148819"
+tinyllama_data_aware_lora_stateful_backend_OV:
+  metric_value: 0.83446
+  num_int4: 94
+  num_int8: 500
