--- a/tests/post_training/data/wc_reference_data_2024.4.yaml
+++ b/tests/post_training/data/wc_reference_data_2024.4.yaml
@@ -2,3 +2,4 @@ tinyllama_NF4_scale_estimation_stateful_per_channel_backend_OV:
   metric_value: 0.87942
   num_int4: 11
   num_int8: 290
+  metrics_xfail_reason: "Issue-148819"
