NF4 per-channel support for AWQ and Scale Estimation (#2898)
### Changes

Supported NF4 mode for Scale Estimation and AWQ. 
All results below were collected w/ and w/o Scale estimation algorithms
and w/ Lora Correction algorithm.


![image](https://github.com/user-attachments/assets/eaab96a9-f7c1-438c-9aef-99a37794b10f)

### Reason for changes

NF4 per-channel with scale estimation may give promising results for
NPU, since the accuracy is on par with int4 group-wise quantization.
### Related tickets

150560

### Tests
- [x] OV 2024.5 
job/NNCF/job/manual/job/post_training_weight_compression/182

![image](https://github.com/user-attachments/assets/f76d40b8-70ab-4cb1-8f6b-eba7d9a41c02)
- [x] OV 2024.4
job/NNCF/job/manual/job/post_training_weight_compression/181

![image](https://github.com/user-attachments/assets/899bebc2-4a1a-4ae2-9740-6eba8d3a0fd2)
- [x] OV 2024.3
job/NNCF/job/manual/job/post_training_weight_compression/180

![image](https://github.com/user-attachments/assets/338a0edb-9425-4868-9a1d-7d1b5eec1631)

--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -36,3 +36,7 @@ tinyllama_data_aware_lora_stateful_backend_OV:
   metric_value: 0.83446
   num_int4: 94
   num_int8: 500
+tinyllama_NF4_scale_estimation_stateful_per_channel_backend_OV:
+  metric_value: 0.88663
+  num_int4: 11
+  num_int8: 290
