--- a/tests/post_training/data/wc_reference_data_2024.5.yaml
+++ b/tests/post_training/data/wc_reference_data_2024.5.yaml
@@ -8,3 +8,7 @@ tinyllama_scale_estimation_per_channel_backend_OV:
   num_int4: 188
   num_int8: 124
   metrics_xfail_reason: "Issue-148819"
+tinyllama_NF4_scale_estimation_stateful_per_channel_backend_OV:
+  metric_value: 0.87132
+  num_int4: 11
+  num_int8: 290
