--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "nncf"
 description = "Neural Networks Compression Framework"
-readme = "README.md"
+readme="docs/PyPiPublishing.md"
 license = { text = "Apache-2.0" }
 authors = [{ name = "Intel" }, { email = "alexander.kozlov@intel.com" }]
 requires-python = ">=3.8"
