--- a/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
@@ -1,4 +1,4 @@
--c ../../constraints.txt
+-c ../../../../constraints.txt
 torch
 datasets
 whowhatbench @ git+https://github.com/andreyanufr/who_what_benchmark.git
