--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           python-version: 3.10.14
       - name: Install NNCF
-        run: pip install -e .
+        run: |
+          pip install -e .
+          pip install torch -c constraints.txt
       - name: Install mypy
         run: pip install mypy==1.8.0
       - name: Run mypy
