--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -3,25 +3,22 @@ permissions: read-all
 
 on:
   workflow_dispatch:
-  pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - edited
   schedule:
     - cron: '0 0 * * *'
+  pull_request:
 
 jobs:
-  examples-cpu:
-    runs-on: ubuntu-20.04-16-cores
+  examples:
+    runs-on: aks-linux-16-cores-64gb
     defaults:
       run:
         shell: bash
-    if: |
-      github.event_name == 'schedule' ||
-      (github.event_name == 'pull_request' && contains(github.event.pull_request.body, '- [x] test examples'))
+
     steps:
+      - name: Install dependencies
+        run : |
+          sudo apt-get update
+          sudo apt-get --assume-yes install build-essential ninja-build libgl1-mesa-dev libglib2.0-0
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
             lfs: true
@@ -38,6 +35,6 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run examples test scope
-        run: python -m pytest -ra tests/cross_fw/examples -s -k post_training_quantization_torch_mobilenet_v2
+        run: python -m pytest -ra tests/cross_fw/examples -s -k post_training_quantization_openvino_anomaly_stfpm_quantize_with_accuracy_control
         env:
           TQDM_DISABLE: 1
