--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -2,14 +2,20 @@ name: Test examples
 permissions: read-all
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+  # workflow_dispatch:
+  # schedule:
+  #   - cron: '0 0 * * *'
   pull_request:
 
 jobs:
   examples:
     runs-on: aks-linux-16-cores-32gb
+    container:
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
+      volumes:
+        - /mount:/mount
+    env:
+      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
     defaults:
       run:
         shell: bash
@@ -17,15 +23,15 @@ jobs:
     steps:
       - name: Install dependencies
         run : |
-          sudo apt-get update
-          sudo apt-get --assume-yes install build-essential ninja-build libgl1-mesa-dev libglib2.0-0
+          apt-get update
+          apt-get install --assume-yes --no-install-recommends git git-lfs lsb-release ca-certificates build-essential ninja-build libgl1-mesa-dev libglib2.0-0
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
             lfs: true
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
           python-version: 3.10.14
-          cache: pip
+          # cache: pip
       - name: cpuinfo
         run: cat /proc/cpuinfo
       - name: Install NNCF and test requirements
@@ -34,18 +40,7 @@ jobs:
           pip install -r tests/cross_fw/examples/requirements.txt
       - name: Print installed modules
         run: pip list
-      # - name: Run examples test scope
-      #   run: python -m pytest -ra tests/cross_fw/examples -s -o log_cli=1 -k post_training_quantization_openvino_anomaly_stfpm_quantize_with_accuracy_control
-      #   env:
-      #     TQDM_DISABLE: 1
-      # - name: test1
-      #   run: pip install -r examples/post_training_quantization/openvino/anomaly_stfpm_quantize_with_accuracy_control/requirements.txt
-      # - name: test1
-      #   run: python -v examples/post_training_quantization/openvino/anomaly_stfpm_quantize_with_accuracy_control/main.py
-      - name: test1
-        run: |
-          pip install -r examples/post_training_quantization/openvino/anomaly_stfpm_quantize_with_accuracy_control/requirements.txt
-          python -v -c "import torch; print(torch.ones(1,1,2))"
-      - name: test2
-        run: |
-          python -v -c "import torch.distributed._composable_state; print(1)"
+      - name: Run examples test scope
+        run: python -m pytest -ra tests/cross_fw/examples -s -k "not llm"
+        env:
+          TQDM_DISABLE: 1
