--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -2,36 +2,35 @@ name: Test examples
 permissions: read-all
 
 on:
-  # workflow_dispatch:
-  # schedule:
-  #   - cron: '0 0 * * *'
-  pull_request:
-
+  pull_request:  # TODO: remove before merge
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
+    inputs:
+      pull_request_number:
+        description: 'The pull request number to run the workflow for'
+        required: true
+        default: ''
 jobs:
-  examples:
-    runs-on: aks-linux-16-cores-32gb
-    container:
-      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
-      volumes:
-        - /mount:/mount
-    env:
-      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
+  examples-cpu:
+    runs-on: ubuntu-20.04-16-cores
     defaults:
       run:
         shell: bash
-
     steps:
-      - name: Install dependencies
-        run : |
-          apt-get update
-          apt-get install --assume-yes --no-install-recommends git git-lfs lsb-release ca-certificates build-essential ninja-build libgl1-mesa-dev libglib2.0-0
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
             lfs: true
+            fetch-depth: 0  # Fetch full history to allow checking out any branch or PR
+      - name: Fetch and Checkout the Pull Request Branch
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pull_request_number != '' }}
+        run: |
+          git fetch origin pull/${{ github.event.inputs.pull_request_number }}/head:pr-${{ github.event.inputs.pull_request_number }}
+          git checkout pr-${{ github.event.inputs.pull_request_number }}
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
           python-version: 3.10.14
-          # cache: pip
+          cache: pip
       - name: cpuinfo
         run: cat /proc/cpuinfo
       - name: Install NNCF and test requirements
@@ -41,6 +40,6 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run examples test scope
-        run: python -m pytest -ra tests/cross_fw/examples -s -k "not llm"
+        run: python -m pytest -ra tests/cross_fw/examples -s
         env:
           TQDM_DISABLE: 1
