--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -8,8 +8,11 @@ on:
   workflow_dispatch:
     inputs:
       pull_request_number:
-        description: 'The pull request number to run the workflow for'
+        description: 'The pull request number'
         required: true
+        default: ''
+      pytest_args:
+        description: 'Pytest arguments'
         default: ''
 jobs:
   examples-cpu:
@@ -40,6 +43,6 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run examples test scope
-        run: python -m pytest -ra tests/cross_fw/examples -s
+        run: python -m pytest -ra tests/cross_fw/examples -s ${{ github.event.inputs.pytest_args || '' }}
         env:
           TQDM_DISABLE: 1
