--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -10,10 +10,10 @@
 #     paths-ignore:
 #       - '**/*.md'
 #       - 'docs/**/*'
-#       - 'tests/post_training/*'  # post_training tests are only run in Jenkins
+#       - 'tests/post_training/*'  # post_training tests runs on Jenkins
 #       - 'tests/torch/sota_checkpoints_eval.json'  # reference for PT e2e
 #       - 'tests/tensorflow/sota_checkpoints_eval.json'  # reference for TF e2e
-
+#       - 'tests/cross_fw/examples/*'  # examples tests runs in manual GA job
 # jobs:
 #   common:
 #     runs-on: ubuntu-20.04
