--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   examples-cpu:
     name: Test exmaples CPU [${{ matrix.group }}/4]
-    runs-on: ubuntu-22.04-8-cores
+    runs-on: ubuntu-22.04-16-cores
     continue-on-error: true
     strategy:
       matrix:
@@ -50,6 +50,7 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run examples test scope
-        run: python -m pytest -ra tests/cross_fw/examples --splits 4 --group ${{ matrix.group }} -s ${{ github.event.inputs.pytest_args || '' }}
+        run: |
+          python -m pytest -ra tests/cross_fw/examples --durations-path=tests/cross_fw/examples/.test_durations --splitting-algorithm=least_duration --splits 4 --group ${{ matrix.group }} -s ${{ github.event.inputs.pytest_args || '' }}
         env:
           TQDM_DISABLE: 1
