--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -20,8 +20,8 @@ jobs:
   examples-cpu:
     name: Test exmaples CPU [${{ matrix.group }}/4]
     runs-on: ubuntu-22.04-16-cores
-    continue-on-error: true
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2, 3, 4]
     defaults:
