--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -53,7 +53,7 @@ jobs:
         continue-on-error: true
         run: |
           python -m pytest -ras tests/cross_fw/examples \
-            --junit-xml=pytest-results.xml \
+            --junit-xml=pytest-results-${{ matrix.group }}.xml \
             --durations-path=tests/cross_fw/examples/.test_durations \
             --splitting-algorithm=least_duration \
             --splits 4 \
@@ -64,5 +64,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-results
-          path: pytest-results.xml
+          name: pytest-results-${{ matrix.group }}
+          path: pytest-results-${{ matrix.group }}.xml
+          overwrite: True
