--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Install mypy
         run: pip install mypy==1.8.0
       - name: Run mypy
-        run: mypy --install-types --config-file=.mypy.ini --non-interactive
+        run: mypy --install-types --non-interactive
