--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ graft nncf/common/hardware/configs
 include LICENSE
 include licensing/third-party-programs.txt
 include docs/PyPiPublishing.md
+include custom_version.py
