--- a/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
@@ -1,8 +1,7 @@
 datasets
-whowhatbench @ git+https://github.com/andreyanufr/who_what_benchmark.git
-numpy>=1.23.5
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git#subdirectory=tools/who_what_benchmark
+numpy>=1.23.5,<2
 openvino==2024.5
-optimum-intel[openvino]>=1.13.0
+optimum-intel[openvino]>=1.19.0
 transformers>=4.35.2
 onnx==1.17.0
-numpy<2
