--- a/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
@@ -1,8 +1,8 @@
--c ../../../../constraints.txt
-torch
-datasets
+torch==2.4.0
+datasets==3.0.1
 numpy>=1.23.5
 openvino==2024.4
 optimum-intel[openvino]>=1.13.0
 transformers>=4.35.2
-onnx<1.16.2
+onnx==1.16.0
+numpy<2
