--- a/tests/openvino/requirements.txt
+++ b/tests/openvino/requirements.txt
@@ -12,3 +12,8 @@ virtualenv
 addict>=2.4.0
 timm==0.9.2
 efficientnet_pytorch==0.7.1
+# for test_weight_compression_statistics_caching.py
+datasets==2.21.0
+transformers==4.38.2
+optimum-intel==1.15.2
+optimum==1.17.1
