--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "pymoo>=0.6.0.1",
     "rich>=13.5.2",
     "scikit-learn>=0.24.0",
-    "scipy>=1.3.2",
+    "scipy>=1.3.2, <1.14.0",
     "tabulate>=0.9.0",
     "tqdm>=4.54.1",
 ]
