--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -4,9 +4,9 @@ permissions: read-all
 on:
   pull_request:
     types:
-      - opened
+      # - opened
       - reopened
-      - synchronize
+      # - synchronize
     paths-ignore:
       - '**/*.md'
       - 'docs/**/*'
