Revert "Update test with WWB"
This reverts commit aff214739591c6a4dda2b7b2afcbc433959923e7.

--- a/examples/llm_compression/openvino/smollm_360m_fp8/requirements.txt
+++ b/examples/llm_compression/openvino/smollm_360m_fp8/requirements.txt
@@ -1,5 +1,5 @@
 datasets
-whowhatbench @ git+https://github.com/andreyanufr/who_what_benchmark.git
 openvino==2024.4
 optimum-intel[openvino]>=1.13.0
-transformers>=4.35.2
+transformers
+torch==2.4.0
